--- a/src/styles/nprogress.css
+++ b/src/styles/nprogress.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: #039D55 !important;
+  background: #FF361F !important;
 
   position: fixed;
   z-index: 1031;
