--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -314,7 +314,7 @@ video {
 }
 .zone-list .item:hover {
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1);
-    color: #FF361F;
+    color: #039D55;
 }
 
 .zone-list-wrapper {
